removes atrax to public package

--- a/playgrounds/atrax_whiteboard.ipynb
+++ b/playgrounds/atrax_whiteboard.ipynb
@@ -951,6 +951,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9f05e2a",
+   "metadata": {},
+   "source": [
+    "#### test dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "8fb24c35",
@@ -2925,23 +2933,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b412aa73",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <thead><tr><th>customer_id</th><th>transaction_date</th><th>sales_amount</th></tr></thead>\n",
+       "            <tbody><tr><td>1044</td><td>2025-01-02 00:00:00</td><td>81.83</td></tr><tr><td>1037</td><td>2025-01-04 00:00:00</td><td>96.75</td></tr><tr><td>1044</td><td>2025-01-03 00:00:00</td><td>10.63</td></tr><tr><td>1046</td><td>2025-01-04 00:00:00</td><td>16.84</td></tr><tr><td>1029</td><td>2025-01-01 00:00:00</td><td>57.09</td></tr></tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
       "text/plain": [
-       "{'customer_id': [1031, 1010, 1050, 1048, 1017],\n",
-       " 'transaction_date': [Timestamp('2025-01-03 00:00:00'),\n",
-       "  Timestamp('2025-01-05 00:00:00'),\n",
-       "  Timestamp('2025-01-04 00:00:00'),\n",
-       "  Timestamp('2025-01-05 00:00:00'),\n",
-       "  Timestamp('2025-01-03 00:00:00')],\n",
-       " 'sales_amount': [41.34, 25.78, 31.54, 81.86, 55.48]}"
+       "customer_id, transaction_date, sales_amount\n",
+       "1044, 2025-01-02 00:00:00, 81.83\n",
+       "1037, 2025-01-04 00:00:00, 96.75\n",
+       "1044, 2025-01-03 00:00:00, 10.63\n",
+       "1046, 2025-01-04 00:00:00, 16.84\n",
+       "1029, 2025-01-01 00:00:00, 57.09"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2961,7 +2976,7 @@
     "ds = Atrax.DataSet(data)\n",
     "#ds['transaction_date'] = pd.to_datetime(ds['transaction_date'])\n",
     "\n",
-    "#ds.head()"
+    "ds.head()"
    ]
   },
   {
@@ -2971,6 +2986,304 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "581dafc4",
+   "metadata": {},
+   "source": [
+    "#### merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2fe2511a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds1 = Atrax.DataSet([\n",
+    "    {'id': 1, 'name': 'alice'},\n",
+    "    {'id': 2, 'name': 'bob'}\n",
+    "])\n",
+    "\n",
+    "ds2 = Atrax.DataSet([\n",
+    "    {'id': 1, 'score': 50},\n",
+    "    {'id': 3, 'score': 75}\n",
+    "])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a5d4790a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <thead><tr><th>id</th><th>name_x</th><th>score</th></tr></thead>\n",
+       "            <tbody><tr><td>1</td><td>alice</td><td>50</td></tr><tr><td>2</td><td>bob</td><td></td></tr></tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "id, name_x, score\n",
+       "1, alice, 50\n",
+       "2, bob, "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1 = ds1.merge(ds2, on='id', how='left')\n",
+    "m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a5d49ee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <thead><tr><th>id</th><th>name_x</th><th>score</th></tr></thead>\n",
+       "            <tbody><tr><td>1</td><td>alice</td><td>50</td></tr><tr><td></td><td></td><td>75</td></tr></tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "id, name_x, score\n",
+       "1, alice, 50\n",
+       ", , 75"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m2 = ds1.merge(ds2, on='id', how='right')\n",
+    "m2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "019dc290",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <thead><tr><th>id</th><th>name_x</th><th>score</th></tr></thead>\n",
+       "            <tbody><tr><td>1</td><td>alice</td><td>50</td></tr></tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "id, name_x, score\n",
+       "1, alice, 50"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m3 = ds1.merge(ds2, on='id', how='inner')\n",
+    "m3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e88d88d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <thead><tr><th>id</th><th>name_x</th><th>score</th></tr></thead>\n",
+       "            <tbody><tr><td>1</td><td>alice</td><td>50</td></tr><tr><td>2</td><td>bob</td><td></td></tr><tr><td></td><td></td><td>75</td></tr></tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "id, name_x, score\n",
+       "1, alice, 50\n",
+       "2, bob, \n",
+       ", , 75"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m4 = ds1.merge(ds2, on='id', how='outer')\n",
+    "m4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7362c272",
+   "metadata": {},
+   "source": [
+    "#### concat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "390b859c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds1 = Atrax.DataSet([\n",
+    "    {'id': 1, 'name': 'alice'},\n",
+    "    {'id': 2, 'name': 'bob'}\n",
+    "])\n",
+    "ds1.set_index('id', inplace=True, drop=True)\n",
+    "\n",
+    "ds2 = Atrax.DataSet([\n",
+    "    {'id': 1, 'score': 50},\n",
+    "    {'id': 3, 'score': 75}\n",
+    "])\n",
+    "ds2.set_index('id', inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "155d1924",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <thead><tr><th></th><th>name</th><th>score</th></tr></thead>\n",
+       "            <tbody><tr><td><strong>1<strong></td><td>alice</td><td>50</td></tr><tr><td><strong>2<strong></td><td>bob</td><td>None</td></tr><tr><td><strong>3<strong></td><td>None</td><td>75</td></tr></tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "name, score\n",
+       "alice, 50\n",
+       "bob, None\n",
+       "None, 75"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined = Atrax.DataSet.concat([ds1, ds2], axis=1)\n",
+    "combined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cb1df50",
+   "metadata": {},
+   "source": [
+    "#### rolling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6f76fc3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><tr><td style=''>0</td><td style=''>None</td></tr><tr><td style=''>1</td><td style=''>None</td></tr><tr><td style=''>2</td><td style=''>20.0</td></tr><tr><td style=''>3</td><td style=''>30.0</td></tr><tr><td style=''>4</td><td style=''>40.0</td></tr><tr><td colspan='2' style='font-style: bold; font-size:1.1rem;'>Name: rolling_series_rolling_mean, dtype: object</td></tr></table>"
+      ],
+      "text/plain": [
+       "0   None\n",
+       "1   None\n",
+       "2   20.0\n",
+       "3   30.0\n",
+       "4   40.0\n",
+       "Name: rolling_series_rolling_mean, dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = Atrax.Series([10, 20, 30, 40, 50])\n",
+    "rolling_avg = s.rolling(window=3).mean()\n",
+    "rolling_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2d0d7e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <thead><tr><th>name</th><th>qty</th><th>rolling_avg</th></tr></thead>\n",
+       "            <tbody><tr><td>apple</td><td>10</td><td>None</td></tr><tr><td>banana</td><td>20</td><td>None</td></tr><tr><td>orange</td><td>30</td><td>20.0</td></tr><tr><td>mango</td><td>40</td><td>30.0</td></tr><tr><td>grape</td><td>50</td><td>40.0</td></tr></tbody>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "name, qty, rolling_avg\n",
+       "apple, 10, None\n",
+       "banana, 20, None\n",
+       "orange, 30, 20.0\n",
+       "mango, 40, 30.0\n",
+       "grape, 50, 40.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds = Atrax.DataSet([\n",
+    "    {'name': 'apple', 'qty': 10},\n",
+    "    {'name': 'banana', 'qty': 20},\n",
+    "    {'name': 'orange', 'qty': 30},\n",
+    "    {'name': 'mango', 'qty': 40},\n",
+    "    {'name': 'grape', 'qty': 50},\n",
+    "])\n",
+    "\n",
+    "ds['rolling_avg'] = ds['qty'].rolling(3).mean()\n",
+    "ds\n"
+   ]
   }
  ],
  "metadata": {
